# helloopengl

./: CMakeLists.txt  main.cpp
src/: main.cpp  main.h
